<resources>
    <string name="app_name">Middleware Scoreboard</string>
    <string name="chart_phy_snr_title">Phy SNR</string>
    <string name="chart_add_btn_title">Add</string>
    <string name="chart_remove_btn_title">Remove</string>
    <string name="chart_device_lost_label">LOST</string>
    <string name="chart_tab_title">Chart</string>
    <string name="devices_tab_title">Devices</string>
    <string name="command_tab_title">Command</string>
    <string name="chart_devices">Device</string>
    <string name="notification_action_close">Finish</string>
    <string name="notification_action_open_console">Console</string>
    <string name="notification_broadcasting">"Broadcasting:"</string>
    <string name="notification_none">NONE</string>
    <string name="tune">Tune</string>
    <string name="frequency_in_mhz">Frequency in MHz</string>
    <string name="select_service">Select Service</string>
    <string name="ping">Ping</string>
    <string name="service_name_or_id">Name or ID</string>
    <string name="apply_test_case">Apply</string>
    <string name="test_case">Test Case</string>
    <string name="volume">Volume</string>
    <string name="rebootDevice">Reboot Device</string>
    <string name="restartApp">Restart App</string>
    <string name="delay_in_second">Delay in seconds</string>
    <string name="bs_id">BSID</string>
    <string name="show_debug_info">Show Debug Info</string>
    <string name="debug">Debug</string>
    <string name="phy">Phy</string>
    <string name="networkInfo">Network Info</string>
    <string name="write_to_file">Write to file</string>
    <string name="file_name">File name</string>
    <string name="duration">Duration</string>
    <string name="telemetry">Telemetry</string>
    <string name="enable">Enable</string>
    <string name="delay">Delay</string>
    <string name="telemetry_sensor_names">Sensor names</string>
    <string name="tune_mhz">MHz</string>
    <string name="command_has_been_sent">Command has been sent</string>
    <string name="clear_test_case">Clear</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="reboot_device_warning">You are going to reboot %d devices. Continue?</string>
    <string name="restart_app_warning">You are going to restart app in %d devices. Continue?</string>
    <string name="no_selected_devices">No selected devices</string>
    <string name="send_global_command">Send Global command</string>
    <string name="you_send_command_to_all_devices">You are going to send Global command</string>
    <string name="all_devices">all</string>
    <string name="console_close_btn">Close</string>
    <string name="console_clear_btn">Clear</string>
    <string name="console_scroll_down">Scroll down</string>
    <string name="ba_entrypoint">BA entry point</string>
    <string name="certificate_hash">Certificate Hash</string>
    <string name="apply_ba_entrypoint">apply</string>
    <string name="ok">OK</string>
    <string name="device_distance">Distance: %s</string>
    <string name="device_id_and_distance">%s, distance: %s</string>
    <string name="device_id">Device ID: %s</string>
    <string name="distance_unknown">unknown</string>
    <string name="distance_format_km">%.3f km</string>
    <string name="distance_format_m">%.0f m</string>
    <string name="warning_access_background_location_permission">Location permission is necessary for correct work of the receiver</string>
    <string name="command_target_selected_devices">Selected devices - %d</string>
    <string name="command_target_broadcast">Broadcast</string>
    <string name="command_target_label">Target</string>
    <string name="telemetry_more_options">…</string>
    <string name="dialog_telemetry_commands_title">Telemetry commands</string>
</resources>