<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_command">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_select_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_service" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_service_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/service_name_or_id"
        android:inputType="numberDecimal"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_bs_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/bs_id"
        android:inputType="numberDecimal"
        android:maxLines="1" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/command_select_service_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="edit_text_service_name,edit_text_bs_id,button_select_service"
        app:flow_horizontalGap="@dimen/command_layout_padding" />

</merge>