<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_command">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_write_to_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_to_file"
        app:layout_constraintBottom_toTopOf="@+id/separator_write_to_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_network_info" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        app:layout_constraintBottom_toBottomOf="@+id/button_write_to_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_write_to_file" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_writing_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toBottomOf="@+id/button_write_to_file"
        app:layout_constraintStart_toEndOf="@+id/edit_text_file_name"
        app:layout_constraintTop_toTopOf="@+id/button_write_to_file" />

    <View
        android:id="@+id/separator_write_to_file"
        style="@style/ViewSeparatorCommand"
        app:layout_constraintBottom_toTopOf="@+id/button_set_telemetry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_write_to_file" />

</merge>