<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_command">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_show_debug_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_debug_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_restart" />

    <CheckBox
        android:id="@+id/checkbox_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/debug"
        app:layout_constraintBottom_toBottomOf="@+id/button_show_debug_info"
        app:layout_constraintEnd_toStartOf="@+id/checkbox_phy"
        app:layout_constraintStart_toEndOf="@+id/button_show_debug_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_show_debug_info" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_phy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phy"
        app:layout_constraintBottom_toBottomOf="@+id/button_show_debug_info"
        app:layout_constraintStart_toEndOf="@+id/checkbox_debug"
        app:layout_constraintTop_toTopOf="@+id/button_show_debug_info" />

    <View
        android:id="@+id/view_separate_show_debug_info"
        style="@style/ViewSeparatorCommand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_show_debug_info" />

</merge>