<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_command">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_set_telemetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telemetry"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_telemetry_delay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_telemetry_names" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_telemetry_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/telemetry_by_name_or_in_general"
        android:lines="3"
        app:layout_constraintEnd_toStartOf="@+id/button_set_telemetry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_write_to_file" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_telemetry_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_telemetry_delay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_telemetry_names" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_telemetry_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/delay"
        app:layout_constraintStart_toEndOf="@+id/checkbox_telemetry_enable"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_telemetry_names" />

    <View
        android:id="@+id/separator_telemetry"
        style="@style/ViewSeparatorCommand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_telemetry_enable" />


</merge>