<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="5dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/console_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/console_close_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/console_clear_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/console_clear_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/console_scroll_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/console_scroll_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/console_control_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="console_close_btn,console_scroll_down,console_clear_btn" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/console_control_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="console_close_btn,console_scroll_down,console_clear_btn" />

    <com.nextgenbroadcast.mobile.middleware.scoreboard.view.ConsoleView
        android:id="@+id/telemetry_console"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:overScrollMode="always"
        android:saveEnabled="false"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/console_control_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>